[gd_scene load_steps=12 format=2]

[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/top_down/homen_das_cavernas(T_D).gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 35.177
height = 7.47199

[sub_resource type="Animation" id=2]
resource_name = "atack_animation"

[sub_resource type="Animation" id=3]
resource_name = "death_animation"

[sub_resource type="Animation" id=4]
resource_name = "idlle_animation"

[sub_resource type="Animation" id=5]
resource_name = "walk_animation"

[sub_resource type="CircleShape2D" id=6]
radius = 36.2275

[sub_resource type="CapsuleShape2D" id=7]
radius = 13.177
height = 41.826

[sub_resource type="CircleShape2D" id=8]
radius = 21.1471

[sub_resource type="CircleShape2D" id=9]
radius = 113.177

[node name="homen_das_cavernas(T_D)" type="KinematicBody2D" groups=[
"enemie",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"enemie",
]]
shape = SubResource( 1 )

[node name="spriter _H_C" type="Sprite" parent="."]
position = Vector2( 0.177002, -1 )
texture = ExtResource( 2 )

[node name="animation_H_C" type="AnimationPlayer" parent="."]
anims/atack_animation = SubResource( 2 )
anims/death_animation = SubResource( 3 )
anims/idlle_animation = SubResource( 4 )
anims/walk_animation = SubResource( 5 )

[node name="corpo_h_c" type="Area2D" parent="." groups=[
"enemie",
]]
position = Vector2( 1, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="corpo_h_c" groups=[
"enemie",
]]
shape = SubResource( 6 )

[node name="area_ataque" type="Area2D" parent="."]
position = Vector2( 12, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_ataque"]
position = Vector2( 36, -5 )
shape = SubResource( 7 )

[node name="arma_inimigo" type="Area2D" parent="." groups=[
"weapom_enemie",
]]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="arma_inimigo" groups=[
"weapom_enemie",
]]
modulate = Color( 0.121569, 1, 0.0470588, 1 )
position = Vector2( 56, -3 )
shape = SubResource( 8 )

[node name="delay_atack" type="Timer" parent="."]

[node name="AI_perception" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI_perception"]
position = Vector2( 7, 0 )
shape = SubResource( 9 )
[connection signal="animation_finished" from="animation_H_C" to="." method="_on_animation_H_C_animation_finished"]
[connection signal="area_entered" from="corpo_h_c" to="." method="_on_corpo_h_c_area_entered"]
[connection signal="body_entered" from="area_ataque" to="." method="_on_area_ataque_body_entered"]
[connection signal="body_exited" from="area_ataque" to="." method="_on_area_ataque_body_exited"]
[connection signal="body_entered" from="arma_inimigo" to="." method="_on_arma_inimigo_body_entered"]
[connection signal="timeout" from="delay_atack" to="." method="_on_delay_atack_timeout"]
[connection signal="body_exited" from="AI_perception" to="." method="_on_AI_perception_body_exited"]
